--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -2,11 +2,13 @@
 header.masthead {
   text-align: center;
   color: white;
+  background-color: black;
   background-image: url("#{$header-image}");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
-  background-size: cover;
+  background-size: contain;
+  //background-size: cover;
   .intro-text {
     padding-top: 150px;
     padding-bottom: 100px;
@@ -26,23 +28,29 @@ header.masthead {
     }
   }
 }
+
+// 여기가 메인 제목 넣는곳
 @media(min-width:768px) {
   header.masthead {
     .intro-text {
-      padding-top: 300px;
-      padding-bottom: 200px;
+      padding-top: 100px;
+      padding-bottom: 50px;
       .intro-lead-in {
-        font-size: 40px;
-        font-style: italic;
+        font-size: 27px;
+        font-style: italic,bold;
         line-height: 40px;
-        margin-bottom: 25px;
+        margin-bottom: 200px;
+        margin-top:200px;
+        color: whitesmoke;
         @include serif-font;
       }
+      //알아보기 버튼
       .intro-heading {
         font-size: 75px;
         font-weight: 700;
         line-height: 75px;
         margin-bottom: 50px;
+        
         @include heading-font;
       }
     }
