--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<script src="http://localhost:35729/livereload.js"></script>
 {% include navheader.html %}
 
 {% include timeline.html %}
